--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,20 +8,24 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
         && apt-get clean \
         && rm -rf /var/lib/apt/lists/*
 
+COPY docker/bin /usr/local/bin/
+
 RUN install_packages --repo=https://mrc-ide.r-universe.dev \
         callr \
         docopt \
-        geojsonio \
-        glue \
+        logger \
         jsonlite \
         jsonvalidate \
         plumber \
         porcelain \
-        ps \
         remotes \
         rlang
 
-COPY docker/bin /usr/local/bin/
+WORKDIR /serovizr
+
+COPY . /src
+
+RUN R CMD INSTALL /src
 
 EXPOSE 8888
 
