--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -28,7 +28,7 @@ jobs:
           needs: lint
 
       - name: Lint
-        run: lintr::lint_package()
+        run: lintr::lint_dir("R")
         shell: Rscript {0}
         env:
           LINTR_ERROR_ON_LINT: true
