--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,12 +14,14 @@ Imports:
     cachem,
     docopt,
     fs,
+    ggplot2,
     httpuv,
     jsonlite,
     logger,
     lubridate,
     mgcv,
     mime,
+    plotly,
     plumber,
     porcelain,
     rlang,
