declare yaml package, add comment

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,8 @@ Imports:
     redoc,
     rlang,
     stringr,
-    tibble
+    tibble,
+    yaml
 Remotes:
     hillalex/porcelain@i39,
 Suggests:
