--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -27,7 +27,8 @@ RUN install_packages --repo=https://mrc-ide.r-universe.dev \
         remotes \
         Rook \
         stringr \
-        tibble
+        tibble \
+        yaml
 
 RUN Rscript -e "install.packages('remotes')"
 RUN Rscript -e 'remotes::install_github("hillalex/porcelain@i39")'
