include data series type

--- a/inst/spec.yaml
+++ b/inst/spec.yaml
@@ -142,6 +142,7 @@ paths:
                         - ab_unit
                         - ab_spike
                       xcol: day_of_study
+                      type: surveillance
         '404':
           description: Dataset with the given name not found
           content:
