correct component name

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -50,7 +50,7 @@ jobs:
       - name: Deploy the app
         uses: digitalocean/app_action/deploy@v2
         env:
-          IMAGE_TAG_SEROVIZR: ${{ steps.sha.outputs.GIT_SHA }}
+          IMAGE_TAG_SEROANALYTICS-SEROVIZR: ${{ steps.sha.outputs.GIT_SHA }}
         with:
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
           app_name: seroviz
