add download public csv endpoint

--- a/inst/spec.yaml
+++ b/inst/spec.yaml
@@ -101,6 +101,16 @@ paths:
                       - name: another_dataset
                         description: dataset from paper
                     errors: null
+  /public/dataset/{name}/:
+    get:
+      description: Download publicly available dataset as CSV
+      responses:
+        '200':
+          description: CSV file
+          content:
+            text/csv:
+              schema:
+                type: string
   /datasets/:
     get:
       description: List available datasets for the given session id
