--- a/inst/spec.yaml
+++ b/inst/spec.yaml
@@ -111,6 +111,12 @@ paths:
             text/csv:
               schema:
                 type: string
+        '404':
+          description: Dataset not found
+          content:
+            application/json:
+              schema:
+                $ref: 'schema/ResponseFailure.schema.json'
   /datasets/:
     get:
       description: List available datasets for the given session id
