--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -36,6 +36,7 @@ RUN Rscript -e 'remotes::install_github("hillalex/porcelain@i39")'
 WORKDIR /serovizr
 
 COPY . /src
+COPY public /serovizr/public
 
 RUN R CMD INSTALL /src
 
